Ujorm 1.30 support